--- a/admin.html
+++ b/admin.html
@@ -32,6 +32,10 @@
 </script>
 
 <header>Админка тарифов и регионов</header>
+<div style="text-align:right; margin-bottom:1rem;">
+  <button style="background:#0077a6; color:white; padding:0.5rem 1rem; border-radius:6px; border:none; cursor:pointer;" 
+          onclick="window.location.href='index.html'">На главную</button>
+</div>
 <div class="container">
   <h2>Регион</h2>
   <div class="form-inline">
